# clickvault

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  deny.toml  renovate.json
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
hack/: README.md  docker-compose.yml
hack/clickhouse/: config.xml  init.sql
src/: check.rs  cleanup.rs  cli.rs  config.rs  error.rs  main.rs  retry.rs  s3.rs
src/backup/: discovery.rs  executor.rs  mod.rs  progress.rs
src/notify/: mod.rs  slack.rs  webhook.rs
tests/: integration.rs
