[package]
name = "clickvault"
version = "0.1.0-alpha.1"
edition = "2024"
description = "ClickHouse backup manager for S3 with full and incremental backups"
license = "MIT"
repository = "https://github.com/sebboer/clickvault"
homepage = "https://github.com/sebboer/clickvault"
readme = "README.md"
keywords = ["clickhouse", "backup", "s3", "incremental", "database"]
categories = ["command-line-utilities", "database"]
exclude = ["hack/", ".claude/"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clickhouse = "0.15.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls", "fail-on-err", "tags"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true            # link-time optimization across all crates
codegen-units = 1     # single codegen unit for better optimization
panic = "abort"       # no unwinding overhead
strip = true          # strip symbols from binary
